# hixbot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: stack-comparison.md  wiki-structure.md
hixbot/: __init__.py  __main__.py  bot.py  config.py  learning.py  models.py  persona.py  policy.py  prompts.py  providers.py  response_judge.py  retriever.py  storage.py  wiki.py
spikes/: typescript-provider-interface.ts
tests/: test_bot_response_flow.py  test_bot_response_policy.py  test_bot_summary.py  test_config.py  test_learning.py  test_persona.py  test_policy.py  test_prompts.py  test_providers.py  test_response_judge.py  test_storage.py  test_wiki.py
